# webview-rs

./: Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
examples/: dialog.rs
src/: content.rs  dialog.rs  error.rs  handle.rs  lib.rs  user_data.rs
webview-rs/: Cargo.toml
webview-rs/examples/: elm-counter.rs  minimal.rs  pageload.rs  timer.rs  todo-purescript.rs  todo.rs
webview-rs/src/: content.rs  dialog.rs  error.rs  handle.rs  lib.rs  state_data.rs
webview-rs/tests/: webview_tests.rs
webview-rs/tests/fixtures/: inject_css.html  invoke_terminate.html
webview-sys/: Cargo.toml  README.md  build.rs
webview-sys/src/: lib.rs  webview_bind.rs  webview_ffi.rs
