[package]
name = "webview"
version = "0.1.0"
authors = ["Boscop", "jspaulsen"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/jspaulsen/web-view"
edition = "2018"
description = "Rust bindings for webview, a tiny cross-platform library to render web-based GUIs for desktop applications"
keywords = ["web", "gui", "desktop", "electron", "webkit"]
categories = ["gui", "web-programming", "api-bindings", "rendering", "visualization"]
exclude = ["examples/todo-ps/dist/**/*", "examples/elm-counter/index.html"]

[dependencies]
urlencoding = "1.0"
webview-sys = { path = "../webview-sys/" }

[dev-dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
