[package]
name = "webview-sys"
version = "0.1.2"
authors = ["Boscop"]
license = "MIT"
repository = "https://github.com/Boscop/web-view"
description = "Rust native ffi bindings for webview"
keywords = ["web", "gui", "desktop", "electron", "webkit"]
categories = ["gui", "web-programming", "api-bindings", "rendering", "visualization"]
build = "build.rs"
links = "webview"

[dependencies]
bitflags = "1.0"

[build-dependencies]
cc = "1"
pkg-config = "0.3"
bindgen = "0.50.0"
